[package]
name = "chapter02"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.42"
serde_json = "1.0.145"
# 本章节特定的依赖
# 使用 workspace 定义的依赖：
# clap = { workspace = true }

# 引用公共库（如果需要）
# common = { path = "../common" }

[lib]
name = "chapter02"
path = "src/lib.rs"

[[bin]]
name = "chapter02"
path = "src/main.rs"
